# mcp-website-tool

./: .dockerignore  .gitignore  APIFY_COMPLIANCE_REPORT.md  BUGFIX_SUMMARY.md  BUILD_VERIFICATION_REPORT.md  DEPLOYMENT.md  Dockerfile  INPUT_SCHEMA_COMPLIANCE_ANALYSIS.md  README.md  apify.json  dataset_schema.json  input_schema.json  pyproject.toml  requirements.txt  test_local.py  test_run.py  validate_actor.py
.actor/: actor.json  dataset_schema.json  input_schema.json
src/: __init__.py  browser.py  extractor.py  main.py  mcp_generator.py  types.py  utils.py
tests/: __init__.py  test_browser.py  test_extractor.py  test_input.py  test_input_validation.py  test_main.py  test_mcp_generator.py  test_types.py  test_utils.py
